{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 106,
  "lineage": "1fe582fa-0df5-593f-8da4-6de122024aba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-027fe6ce6050030fc",
            "domain": "vpc",
            "id": "eipalloc-06fb9d40fe671d006",
            "network_interface": "eni-0793f87e0911fa1a3",
            "private_dns": "ip-172-17-2-217.ec2.internal",
            "private_ip": "172.17.2.217",
            "public_dns": "ec2-18-213-19-226.compute-1.amazonaws.com",
            "public_ip": "18.213.19.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "webapp"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0db10424d0688c441",
            "domain": "vpc",
            "id": "eipalloc-0a0a84cf8acae07e9",
            "network_interface": "eni-0704758d8e54cb813",
            "private_dns": "ip-172-17-3-40.ec2.internal",
            "private_ip": "172.17.3.40",
            "public_dns": "ec2-34-199-15-185.compute-1.amazonaws.com",
            "public_ip": "34.199.15.185",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "webapp"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03be83db2f5ca3aaf",
            "owner_id": "252948918456",
            "tags": {
              "Name": "webapp"
            },
            "vpc_id": "vpc-0b719172d6e59232d"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06fb9d40fe671d006",
            "id": "nat-009f4acf97f078fdf",
            "network_interface_id": "eni-0793f87e0911fa1a3",
            "private_ip": "172.17.2.217",
            "public_ip": "18.213.19.226",
            "subnet_id": "subnet-015f7e8b94c74e733",
            "tags": {
              "Environment": "webapp"
            }
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_subnet.public",
            "aws_vpc.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0a84cf8acae07e9",
            "id": "nat-0926f228ee6343527",
            "network_interface_id": "eni-0704758d8e54cb813",
            "private_ip": "172.17.3.40",
            "public_ip": "34.199.15.185",
            "subnet_id": "subnet-0653cc35e06152ebe",
            "tags": {
              "Environment": "webapp"
            }
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_subnet.public",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03be83db2f5ca3aaf",
            "id": "r-rtb-0a614dd6f69d091841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a614dd6f69d09184",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d7cc19f8bd9650ee",
            "owner_id": "252948918456",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-009f4acf97f078fdf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "webapp"
            },
            "vpc_id": "vpc-0b719172d6e59232d"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fee5bcaf97366179",
            "owner_id": "252948918456",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0926f228ee6343527",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "webapp"
            },
            "vpc_id": "vpc-0b719172d6e59232d"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0998b1a03878a6d0f",
            "route_table_id": "rtb-0d7cc19f8bd9650ee",
            "subnet_id": "subnet-0e366d4d358e2d3d6"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09439e87bf9aa1084",
            "route_table_id": "rtb-0fee5bcaf97366179",
            "subnet_id": "subnet-0180926b94d33f5f0"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252948918456:security-group/sg-07ed52138ef90532d",
            "description": "Permite acesso ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ed52138ef90532d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sgwebapp",
            "name_prefix": null,
            "owner_id": "252948918456",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b719172d6e59232d"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252948918456:subnet/subnet-0e366d4d358e2d3d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-0e366d4d358e2d3d6",
            "map_public_ip_on_launch": false,
            "owner_id": "252948918456",
            "tags": {
              "Name": "Private"
            },
            "vpc_id": "vpc-0b719172d6e59232d"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252948918456:subnet/subnet-0180926b94d33f5f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-0180926b94d33f5f0",
            "map_public_ip_on_launch": false,
            "owner_id": "252948918456",
            "tags": {
              "Name": "Private"
            },
            "vpc_id": "vpc-0b719172d6e59232d"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252948918456:subnet/subnet-015f7e8b94c74e733",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-015f7e8b94c74e733",
            "map_public_ip_on_launch": true,
            "owner_id": "252948918456",
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0b719172d6e59232d"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252948918456:subnet/subnet-0653cc35e06152ebe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-0653cc35e06152ebe",
            "map_public_ip_on_launch": true,
            "owner_id": "252948918456",
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0b719172d6e59232d"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252948918456:vpc/vpc-0b719172d6e59232d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-059b1033304e612df",
            "default_route_table_id": "rtb-0a614dd6f69d09184",
            "default_security_group_id": "sg-0dc627887c4d31d9f",
            "dhcp_options_id": "dopt-d6d1c6ad",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b719172d6e59232d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a614dd6f69d09184",
            "owner_id": "252948918456",
            "tags": {
              "Name": "webapp"
            }
          }
        }
      ]
    }
  ]
}